--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -3,8 +3,8 @@ body {
   }
 
 h1{
-      font-family: 'Sailec-Regular';
-      font-size: 3rem;
+      font-family: 'Sailec-Bold';
+      font-size: 3.5rem;
       letter-spacing: .1rem;
 
   }
