Update to index

--- a/src/pages/global.scss
+++ b/src/pages/global.scss
@@ -6,8 +6,8 @@ body {
   }
 
 h1{
-      font-family: 'Sailec-Bold';
-      font-size: 3.5rem;
+      font-family: 'Sailec-Regular';
+      font-size: 3rem;
       letter-spacing: .1rem;
   }
 
