--- a/src/pages/fonts.css
+++ b/src/pages/fonts.css
@@ -32,3 +32,4 @@
   
 @font-face {font-family: 'Sailec-Regular';src:url('webfonts/371A84_1_unhinted_0.woff2') format('woff2'),url('webfonts/371A84_1_unhinted_0.woff') format('woff'),url('webfonts/371A84_1_unhinted_0.ttf') format('truetype');}
  
+@font-face {font-family: 'GT-Super-Book';src:url('webfonts/GT-Super-Text-Book.woff2') format('woff2'),url('webfonts/GT-Super-Text-Book.woff') format('woff'),url('webfonts/GT-Super-Text-Book.ttf') format('truetype');}
